# PixelProdigyAI

./: .gitignore  3d_vertex_matrix_environment.html  4K_INTEGRATION_COMPLETE.md  4K_QUICK_START.md  4K_RENDERING_STATUS.md  4_WEEK_SPRINT_PLAN.md  4k_artwork_vertex_generator.html  4k_integration_state.json  ABILITY_MANAGER_FIX_COMPLETE.md  ACTION_ITEMS_NOW.md  ADVANCED_MATHEMATICAL_PRINCIPLES.md  ADVANCED_TREE_RENDERING_COMPLETE.md  AI_COMMAND_PROTOCOL.md  AI_ENVIRONMENT_CONSULTATION.md  AI_EXECUTION_CHECKLIST.md  AI_LANDING_PAGE_CONSULTATION.md  AI_METHOD_ASSIGNMENTS.md  AI_PERSONALITY_CALCULATION.md  AI_PERSONALITY_TYPES.md  AI_RECURSIVE_BUILDING_PROTOCOL.md  AI_SCULPTING_OBJECT_CATALOG.md  AI_SCULPTING_QUICK_START.md  AI_TEXT_TO_3D_SCULPTING_FEATURE_SPEC.md  AI_VERTEX_RENDERING_COMPLETE.md  ANTI_HACK_COMPLETE.md  API_ARCHITECTURE.md  ARCHITECTURAL_DETAIL_COMPLETE.md  ARM_HIERARCHY_IMPLEMENTATION_COMPLETE.md  BETA_TESTING_DEPLOYMENT.md  BIND_001_COMPLETE.md  BING_VERIFICATION_COMPLETE_GUIDE.md  BLACK_SCREEN_FIX_COMPLETE.md  BLOCKCHAIN_INTEGRATION.md  BLOG_PLATFORM_DOCUMENTATION.md  BODY_VERTEX_WORKFLOW.md  BONE_HIERARCHY_SYSTEM.md  BONE_NAMING_COMPLETE.md  BOX_SELECT_GUIDE.md  BRANCH_STRUCTURE.md  BROWISEXR_VERTEX_MATH.md  (+423 more)
.github/: FUNDING.yml  copilot-instructions.md
blockchain/pixelchain/: Cargo.toml  README.md
blockchain/pixelchain/src/: block.rs  chain.rs  consensus.rs  gene.rs  lib.rs  main.rs  network.rs  transaction.rs
blockchain/solana-bridge/programs/pixel-bridge/: Cargo.toml
blockchain/solana-bridge/programs/pixel-bridge/src/: lib.rs
(+11709 files in other folders)
