[package]
name = "pixelchain"
version = "0.1.0"
edition = "2021"
authors = ["Eugene Ousos <eugeneousxr2025@outlook.com>"]
description = "Gene-compressed 3D object blockchain for PixelProdigy AI"

[dependencies]
# Core blockchain
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Networking
tokio = { version = "1.35", features = ["full"] }
libp2p = "0.53"

# Solana integration
solana-client = "1.17"
solana-sdk = "1.17"
anchor-client = "0.29"

# Gene compression
flate2 = "1.0"  # For gene data compression
base58 = "0.2"  # For encoding gene strings

# Utilities
thiserror = "1.0"
hex = "0.4"
rand = "0.8"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "pixelchain-node"
path = "src/main.rs"

[lib]
name = "pixelchain"
path = "src/lib.rs"
