[package]
name = "pixel-bridge"
version = "0.1.0"
description = "PixelProdigy App-Chain bridge to Solana for gene-compressed 3D objects"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pixel_bridge"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.17.0"
sha2 = "0.10"
bs58 = "0.5.0"

[dev-dependencies]
solana-program-test = "1.17.0"
solana-sdk = "1.17.0"
tokio = "1.35"
